--- a/pset5/test.ipynb
+++ b/pset5/test.ipynb
@@ -2,133 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>5410951</th>\n",
-       "      <th>activity2</th>\n",
-       "      <th>53</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5410952</td>\n",
-       "      <td>activity2</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5410953</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>207</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5410954</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5410955</td>\n",
-       "      <td>activity2</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5410956</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1046</th>\n",
-       "      <td>5411998</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1047</th>\n",
-       "      <td>5411999</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048</th>\n",
-       "      <td>5412000</td>\n",
-       "      <td>activity2</td>\n",
-       "      <td>144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1049</th>\n",
-       "      <td>5412001</td>\n",
-       "      <td>activity1</td>\n",
-       "      <td>161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1050</th>\n",
-       "      <td>5412002</td>\n",
-       "      <td>activity2</td>\n",
-       "      <td>48</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1051 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      5410951  activity2   53\n",
-       "0     5410952  activity2   79\n",
-       "1     5410953  activity1  207\n",
-       "2     5410954  activity1  179\n",
-       "3     5410955  activity2   68\n",
-       "4     5410956  activity1  135\n",
-       "...       ...        ...  ...\n",
-       "1046  5411998  activity1  148\n",
-       "1047  5411999  activity1   95\n",
-       "1048  5412000  activity2  144\n",
-       "1049  5412001  activity1  161\n",
-       "1050  5412002  activity2   48\n",
-       "\n",
-       "[1051 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv(\"learningOutcomes.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.398085385568976\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding differences in mean\n",
+    "data_activity_1 = data[data[\"activity2\"] == \"activity1\"]\n",
+    "data_activity_2 = data[data[\"activity2\"] == \"activity2\"]\n",
+    "\n",
+    "outcomes_1 = data_activity_1[\"53\"]\n",
+    "outcomes_2 = data_activity_2[\"53\"]\n",
+    "\n",
+    "sample_mean_difference = abs(outcomes_1.mean() - outcomes_2.mean())\n",
+    "\n",
+    "print(sample_mean_difference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.039\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from statistics import mean\n",
+    "\n",
+    "# Bootstrapping\n",
+    "# Defining number of activity1 and activity2 resamples\n",
+    "activity_1_samples = len(outcomes_1)\n",
+    "activity_2_samples = len(outcomes_2)\n",
+    "\n",
+    "# Combining two samples\n",
+    "combined = list(outcomes_1) + list(outcomes_2)\n",
+    "\n",
+    "# Defining count and num iterations\n",
+    "count = 0\n",
+    "iterations = 100000\n",
+    "\n",
+    "# Iterating and estimating\n",
+    "for i in range(iterations):\n",
+    "    activity_1_resample = [random.choice(combined) for j in range(activity_1_samples)]\n",
+    "    activity_2_resample = [random.choice(combined) for j in range(activity_2_samples)]\n",
+    "    mu_1 = mean(activity_1_resample)\n",
+    "    mu_2 = mean(activity_2_resample)\n",
+    "    if abs(mu_1 - mu_2) >= sample_mean_difference:\n",
+    "        count += 1\n",
+    "print(count / iterations)\n"
    ]
   },
   {
