--- a/pset5/sampling.ipynb
+++ b/pset5/sampling.ipynb
@@ -16,18 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101.12296066566657\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Mean\n",
     "iterations = 10000\n",
     "means = []\n",
     "for i in range(iterations):\n",
@@ -42,18 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54.12519410941094\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Median\n",
     "iterations = 10000\n",
     "medians = []\n",
     "for i in range(iterations):\n",
