Initial log reg structure

--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -39,11 +39,16 @@
     "learn = 0.001\n",
     "steps = 1000\n",
     "\n",
+    "# Steps\n",
     "for _ in range(steps):\n",
+    "    \n",
+    "    # Initializing gradients\n",
     "    gradient = [0] * len(data)    \n",
     "\n",
-    "for row in data.iterrows():\n",
-    "    print(row[1])\n",
+    "    # Iterating through rows\n",
+    "    for row_tuple in data.iterrows():\n",
+    "        \n",
+    "        row = list(row_tuple[1])\n",
     "\n",
     "    "
    ]
