--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -15,6 +15,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from scipy.special import expit\n",
+    "import numpy as np\n",
     "\n",
     "data = pd.read_csv('simple/simple-train.csv')"
    ]
@@ -47,8 +49,9 @@
     "\n",
     "    # Iterating through rows\n",
     "    for row_tuple in data.iterrows():\n",
-    "        \n",
     "        row = list(row_tuple[1])\n",
+    "            for feature in range(0, len(row) - 1):\n",
+    "                \n",
     "\n",
     "    "
    ]
@@ -56,6 +59,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [2, 3, 4]\n",
+    "\n",
+    "print(np.dot(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
