--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from scipy.special import expit\n",
@@ -23,20 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 6 (3838745545.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    for row in data.iterrows():\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 6\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.float64(0.7987714308923123), np.float64(-0.08886543362441451), 0.0]\n"
      ]
     }
    ],
    "source": [
-    "params = [0] * len(data)\n",
+    "params = [0] * (len(data) - 1)\n",
     "\n",
     "learn = 0.001\n",
     "steps = 1000\n",
@@ -45,12 +36,25 @@
     "for _ in range(steps):\n",
     "    \n",
     "    # Initializing gradients\n",
-    "    gradient = [0] * len(data)    \n",
+    "    gradient = [0] * (len(data) - 1)  \n",
     "\n",
     "    # Iterating through rows\n",
     "    for row_tuple in data.iterrows():\n",
     "        row = list(row_tuple[1])\n",
-    "            for feature in range(0, len(row) - 1):\n",
+    "        for i in range(0, len(row) - 1):\n",
+    "            gradient[i] += row[i] * (row[len(row) - 1] - expit((np.dot(row[:len(row)], params))))\n",
+    "       \n",
+    "    # Multiplying gradient values by learn rate \n",
+    "    gradient = [learn * val for val in gradient]\n",
+    "\n",
+    "    for i in range(len(params)):\n",
+    "        params[i] += gradient[i]\n",
+    "    \n",
+    "    \n",
+    "print(params)\n",
+    "\n",
+    "     \n",
+    "\n",
     "                \n",
     "\n",
     "    "
@@ -67,23 +71,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
      ]
     }
    ],
-   "source": [
-    "a = [1, 2, 3]\n",
-    "b = [2, 3, 4]\n",
-    "\n",
-    "print(np.dot(a, b))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
