--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[np.float64(0.7987714308923123), np.float64(-0.08886543362441451), 0.0]\n"
+      "[0, 0]\n",
+      "[np.float64(0.7987714308923123), np.float64(-0.08886543362441451)]\n"
      ]
     }
    ],
    "source": [
-    "params = [0] * (len(data) - 1)\n",
+    "# Excluding the label\n",
+    "params = [0] * (data.shape[1] - 1)\n",
+    "print(params)\n",
     "\n",
     "learn = 0.001\n",
     "steps = 1000\n",
@@ -36,13 +39,19 @@
     "for _ in range(steps):\n",
     "    \n",
     "    # Initializing gradients\n",
-    "    gradient = [0] * (len(data) - 1)  \n",
+    "    gradient = [0] * (data.shape[1] - 1) \n",
     "\n",
     "    # Iterating through rows\n",
     "    for row_tuple in data.iterrows():\n",
+    "        \n",
+    "        # Extracting features and labels\n",
     "        row = list(row_tuple[1])\n",
-    "        for i in range(0, len(row) - 1):\n",
-    "            gradient[i] += row[i] * (row[len(row) - 1] - expit((np.dot(row[:len(row)], params))))\n",
+    "        features = row[:-1]\n",
+    "        label = row[-1]\n",
+    "\n",
+    "        # Iterating through features\n",
+    "        for i in range(len(features)):\n",
+    "            gradient[i] += features[i] * (label - expit((np.dot(params, features))))\n",
     "       \n",
     "    # Multiplying gradient values by learn rate \n",
     "    gradient = [learn * val for val in gradient]\n",
@@ -51,13 +60,7 @@
     "        params[i] += gradient[i]\n",
     "    \n",
     "    \n",
-    "print(params)\n",
-    "\n",
-    "     \n",
-    "\n",
-    "                \n",
-    "\n",
-    "    "
+    "print(params)"
    ]
   },
   {
@@ -69,15 +72,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
