Prepping to add a bias term.

--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,33 +10,25 @@
     "from scipy.special import expit\n",
     "import numpy as np\n",
     "\n",
+    "# Train data\n",
     "data = pd.read_csv('simple/simple-train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0]\n",
-      "[np.float64(0.7987714308923123), np.float64(-0.08886543362441451)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excluding the label\n",
     "params = [0] * (data.shape[1] - 1)\n",
-    "print(params)\n",
     "\n",
-    "learn = 0.001\n",
+    "learn = 0.0001\n",
     "steps = 1000\n",
     "\n",
     "# Steps\n",
     "for _ in range(steps):\n",
+    "    print(f\"Trial: {_}\")\n",
     "    \n",
     "    # Initializing gradients\n",
     "    gradient = [0] * (data.shape[1] - 1) \n",
@@ -73,7 +65,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Testing file\n",
+    "test = pd.read_csv(\"ancestry/ancestry-test.csv\")\n",
+    "\n",
+    "res = []\n",
+    "for row_tuple in test.iterrows():\n",
+    "    \n",
+    "    # Prediction and validation\n",
+    "    row = list(row_tuple[1])\n",
+    "    features = row[:-1]\n",
+    "    label = row[-1]\n",
+    "    \n",
+    "    prediction = expit(np.dot(params, features))\n",
+    "    res.append(1 if round(prediction) == label else 0)\n",
+    "\n",
+    "print(f\"Accuracy: {res.count(1) / len(res)}\")\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
