Working logistics regression

--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -11,14 +11,65 @@
     "import numpy as np\n",
     "\n",
     "# Train data\n",
-    "data = pd.read_csv('simple/simple-train.csv')"
+    "data = pd.read_csv('ancestry/ancestry-train.csv')\n",
+    "data.insert(0, 'bias', [1] * len(data))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial: 0\n",
+      "Trial: 1\n",
+      "Trial: 2\n",
+      "Trial: 3\n",
+      "Trial: 4\n",
+      "Trial: 5\n",
+      "Trial: 6\n",
+      "Trial: 7\n",
+      "Trial: 8\n",
+      "Trial: 9\n",
+      "Trial: 10\n",
+      "Trial: 11\n",
+      "Trial: 12\n",
+      "Trial: 13\n",
+      "Trial: 14\n",
+      "Trial: 15\n",
+      "Trial: 16\n",
+      "Trial: 17\n",
+      "Trial: 18\n",
+      "Trial: 19\n",
+      "Trial: 20\n",
+      "Trial: 21\n",
+      "Trial: 22\n",
+      "Trial: 23\n",
+      "Trial: 24\n",
+      "Trial: 25\n",
+      "Trial: 26\n",
+      "Trial: 27\n",
+      "Trial: 28\n",
+      "Trial: 29\n",
+      "Trial: 30\n",
+      "Trial: 31\n",
+      "Trial: 32\n",
+      "Trial: 33\n",
+      "Trial: 34\n",
+      "Trial: 35\n",
+      "Trial: 36\n",
+      "Trial: 37\n",
+      "Trial: 38\n",
+      "Trial: 39\n",
+      "Trial: 40\n",
+      "Trial: 41\n",
+      "Trial: 42\n"
+     ]
+    }
+   ],
    "source": [
     "# Excluding the label\n",
     "params = [0] * (data.shape[1] - 1)\n",
@@ -56,11 +107,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -68,6 +114,7 @@
    "source": [
     "# Testing file\n",
     "test = pd.read_csv(\"ancestry/ancestry-test.csv\")\n",
+    "test.insert(0, 'bias', [1] * len(test))\n",
     "\n",
     "res = []\n",
     "for row_tuple in test.iterrows():\n",
@@ -76,7 +123,6 @@
     "    row = list(row_tuple[1])\n",
     "    features = row[:-1]\n",
     "    label = row[-1]\n",
-    "    \n",
     "    prediction = expit(np.dot(params, features))\n",
     "    res.append(1 if round(prediction) == label else 0)\n",
     "\n",
@@ -84,6 +130,17 @@
     "\n",
     "\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [abs(param) for param in params]\n",
+    "print(params)\n",
+    "print(max(params))"
    ]
   },
   {
