Added heart data set

--- a/pset6/logisticregression.ipynb
+++ b/pset6/logisticregression.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "\n",
     "# Train data\n",
-    "data = pd.read_csv('ancestry/ancestry-train.csv')\n",
+    "data = pd.read_csv('heart/heart-train.csv')\n",
     "data.insert(0, 'bias', [1] * len(data))"
    ]
   },
@@ -19,62 +19,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trial: 0\n",
-      "Trial: 1\n",
-      "Trial: 2\n",
-      "Trial: 3\n",
-      "Trial: 4\n",
-      "Trial: 5\n",
-      "Trial: 6\n",
-      "Trial: 7\n",
-      "Trial: 8\n",
-      "Trial: 9\n",
-      "Trial: 10\n",
-      "Trial: 11\n",
-      "Trial: 12\n",
-      "Trial: 13\n",
-      "Trial: 14\n",
-      "Trial: 15\n",
-      "Trial: 16\n",
-      "Trial: 17\n",
-      "Trial: 18\n",
-      "Trial: 19\n",
-      "Trial: 20\n",
-      "Trial: 21\n",
-      "Trial: 22\n",
-      "Trial: 23\n",
-      "Trial: 24\n",
-      "Trial: 25\n",
-      "Trial: 26\n",
-      "Trial: 27\n",
-      "Trial: 28\n",
-      "Trial: 29\n",
-      "Trial: 30\n",
-      "Trial: 31\n",
-      "Trial: 32\n",
-      "Trial: 33\n",
-      "Trial: 34\n",
-      "Trial: 35\n",
-      "Trial: 36\n",
-      "Trial: 37\n",
-      "Trial: 38\n",
-      "Trial: 39\n",
-      "Trial: 40\n",
-      "Trial: 41\n",
-      "Trial: 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Excluding the label\n",
     "params = [0] * (data.shape[1] - 1)\n",
     "\n",
-    "learn = 0.0001\n",
+    "learn = 0.000001\n",
     "steps = 1000\n",
     "\n",
     "# Steps\n",
@@ -113,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Testing file\n",
-    "test = pd.read_csv(\"ancestry/ancestry-test.csv\")\n",
+    "test = pd.read_csv(\"heart/heart-test.csv\")\n",
     "test.insert(0, 'bias', [1] * len(test))\n",
     "\n",
     "res = []\n",
@@ -126,10 +76,18 @@
     "    prediction = expit(np.dot(params, features))\n",
     "    res.append(1 if round(prediction) == label else 0)\n",
     "\n",
-    "print(f\"Accuracy: {res.count(1) / len(res)}\")\n",
-    "\n",
-    "\n",
-    "    \n"
+    "print(f\"Accuracy: {res.count(1) / len(res)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, param in enumerate(params):\n",
+    "    print(f\"{i}: {param}\")\n",
+    "    "
    ]
   },
   {
