--- a/pset6/linearregression.ipynb
+++ b/pset6/linearregression.ipynb
@@ -9,12 +9,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "<class 'pandas.core.frame.DataFrame'>\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Load train and test data\n",
+    "train_data = pd.read_csv('caltrain/caltrain-train.csv')\n",
+    "test_data = pd.read_csv('caltrain/caltrain-test.csv')\n",
+    "\n",
+    "# Extracting features and labels for training\n",
+    "X_train = train_data[['is_summer', 'is_weekend', 'is_holiday', 'north_or_southbound', 'busy_time_of_day', 'temperature', 'chance_of_rain']]\n",
+    "y_train = train_data['passengers_per_hour']\n",
+    "\n",
+    "# Extracting features and labels for testing\n",
+    "X_test = test_data[['is_summer', 'is_weekend', 'is_holiday', 'north_or_southbound', 'busy_time_of_day', 'temperature', 'chance_of_rain']]\n",
+    "y_test = test_data['passengers_per_hour']"
    ]
   },
   {
@@ -22,7 +37,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create and train the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate Root Mean Squared Error (RMSE)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse:.5f}\")"
+   ]
   }
  ],
  "metadata": {
