--- a/pset6/linearregression.ipynb
+++ b/pset6/linearregression.ipynb
@@ -2,22 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from scipy.stats import norm\n",
+    "from math import sqrt\n",
     "\n",
     "# Load train and test data\n",
     "train_data = pd.read_csv('caltrain/caltrain-train.csv')\n",
@@ -34,11 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 13.75292\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create and train the Linear Regression model\n",
+    "# Create and fit the model\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
@@ -49,6 +51,46 @@
     "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "print(f\"Root Mean Squared Error (RMSE): {rmse:.5f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating prediction errors\n",
+    "y_actual = test_data['passengers_per_hour'].to_numpy()\n",
+    "\n",
+    "residuals = y_actual - y_pred\n",
+    "\n",
+    "var = np.mean(residuals**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1458808483557219\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_value = 20 / sqrt(var)\n",
+    "\n",
+    "print(2 * (1 - norm.cdf(z_value)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
